--- a/_notebooks/2021-04-18-rain-in-australia.ipynb
+++ b/_notebooks/2021-04-18-rain-in-australia.ipynb
@@ -7,7 +7,14 @@
     "id": "LcYGLhabtko4"
    },
    "source": [
-    "# Predicting rain in Australia"
+    "# Predicting rain in Australia\n",
+    "> Exploration and analysis of rainfall data \n",
+    "\n",
+    "- toc: true \n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- categories: [jupyter]\n",
+    "- image: images/fire-aus.png"
    ]
   },
   {
@@ -17,7 +24,7 @@
     "id": "bjJwm55UuAxg"
    },
    "source": [
-    "**INTRODUCTION**\n",
+    "## INTRODUCTION\n",
     "\n",
     "In this project, we will compare 2 machine learning models, namely **Logistic Regression** and **XGBoost** , and also explain the use for each algorithm. The dataset used for this project is\n",
     "called **weatherAUS**"
@@ -47,6 +54,7 @@
    },
    "outputs": [],
    "source": [
+    "#collapse-hide\n",
     "import numpy as np                  #For linear algebra\n",
     "import pandas as pd                 #For working with dataset\n",
     "import matplotlib                 \n",
@@ -61,7 +69,7 @@
     "id": "glhU0NTdGlLV"
    },
    "source": [
-    "## **I. Data exploration**"
+    "## I. Data exploration"
    ]
   },
   {
@@ -295,6 +303,7 @@
     }
    ],
    "source": [
+    "#collapse-hide\n",
     "df = pd.read_csv('./input/weatherAUS.csv')\n",
     "df.head()"
    ]
@@ -327,6 +336,7 @@
     }
    ],
    "source": [
+    "#collapse-hide\n",
     "print(df.columns)\n",
     "print(len(df.columns))"
    ]
@@ -349,60 +359,6 @@
    },
    "source": [
     "Let's have a look at the dataset information"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 537
-    },
-    "colab_type": "code",
-    "id": "mOtk4JIYZtUV",
-    "outputId": "89685bf9-fdae-4ef2-bbe9-b75ab04977c0"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 145460 entries, 0 to 145459\n",
-      "Data columns (total 23 columns):\n",
-      " #   Column         Non-Null Count   Dtype  \n",
-      "---  ------         --------------   -----  \n",
-      " 0   Date           145460 non-null  object \n",
-      " 1   Location       145460 non-null  object \n",
-      " 2   MinTemp        143975 non-null  float64\n",
-      " 3   MaxTemp        144199 non-null  float64\n",
-      " 4   Rainfall       142199 non-null  float64\n",
-      " 5   Evaporation    82670 non-null   float64\n",
-      " 6   Sunshine       75625 non-null   float64\n",
-      " 7   WindGustDir    135134 non-null  object \n",
-      " 8   WindGustSpeed  135197 non-null  float64\n",
-      " 9   WindDir9am     134894 non-null  object \n",
-      " 10  WindDir3pm     141232 non-null  object \n",
-      " 11  WindSpeed9am   143693 non-null  float64\n",
-      " 12  WindSpeed3pm   142398 non-null  float64\n",
-      " 13  Humidity9am    142806 non-null  float64\n",
-      " 14  Humidity3pm    140953 non-null  float64\n",
-      " 15  Pressure9am    130395 non-null  float64\n",
-      " 16  Pressure3pm    130432 non-null  float64\n",
-      " 17  Cloud9am       89572 non-null   float64\n",
-      " 18  Cloud3pm       86102 non-null   float64\n",
-      " 19  Temp9am        143693 non-null  float64\n",
-      " 20  Temp3pm        141851 non-null  float64\n",
-      " 21  RainToday      142199 non-null  object \n",
-      " 22  RainTomorrow   142193 non-null  object \n",
-      "dtypes: float64(16), object(7)\n",
-      "memory usage: 25.5+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.info()"
    ]
   },
   {
@@ -680,6 +636,7 @@
     }
    ],
    "source": [
+    "#collapse-hide\n",
     "df[categorical].isnull().sum()"
    ]
   },
@@ -711,6 +668,7 @@
     }
    ],
    "source": [
+    "#collapse-hide\n",
     "df[categorical].isnull().sum().plot.bar()\n",
     "plt.show()"
    ]
@@ -777,6 +735,7 @@
     }
    ],
    "source": [
+    "#collapse-hide\n",
     "(df[categorical].isnull().sum() / entries).plot.bar()\n",
     "plt.show()"
    ]
@@ -1870,6 +1829,7 @@
     }
    ],
    "source": [
+    "#collapse-hide\n",
     "df['Date'] = pd.to_datetime(df['Date'])\n",
     "df.head()"
    ]
@@ -2088,6 +2048,7 @@
     }
    ],
    "source": [
+    "#collapse-hide\n",
     "df['Day'] = df['Date'].dt.day\n",
     "df['Month'] = df['Date'].dt.month\n",
     "df.head()"
@@ -2417,7 +2378,7 @@
     "id": "sb7eBU0eGwDA"
    },
    "source": [
-    "## **II. Data preparation**\n",
+    "## II. Data preparation\n",
     "\n",
     "In this part, we will prepare the data to better expose the underlying data patterns."
    ]
@@ -2429,7 +2390,7 @@
     "id": "e-0wK4-6HVpI"
    },
    "source": [
-    "### ***1. Data cleaning***\n",
+    "### 1. Data cleaning\n",
     "\n",
     "In the data cleaning task, we will come to **remove outliers** and deal with **missing values**."
    ]
@@ -3450,7 +3411,7 @@
     "id": "stneOpHKOG5G"
    },
    "source": [
-    "### ***2. Feature selection***\n",
+    "### 2. Feature selection\n",
     "In this part, we will deal with highly correlated variables"
    ]
   },
@@ -3556,7 +3517,7 @@
     "id": "odi0oA4AR21G"
    },
    "source": [
-    "### ***3. Feature engineering***\n",
+    "### 3. Feature engineering\n",
     "Since Machine learning algorithms require input and target variables to be **numerical** so in this part, we will transform our **categorical** values into **numeric** ones. "
    ]
   },
@@ -3891,7 +3852,7 @@
     "id": "ljPgyo0SekeM"
    },
    "source": [
-    "### ***4. Feature scaling***\n",
+    "### 4. Feature Scaling\n",
     "Since the the entries in our dataset are of different scales, we will scale them to a certain range."
    ]
   },
@@ -4490,7 +4451,7 @@
     "id": "QahTia7cg8ww"
    },
    "source": [
-    "## **III. Train models**\n",
+    "## III. Train models\n",
     "In this part, we will train our model using different ML algorithms. \n",
     "\n",
     "Since this is a **classification task**, we will use 2 algorthms in this project, namely:\n",
@@ -4546,7 +4507,7 @@
     "id": "tPE0bV30tM9V"
    },
    "source": [
-    "### ***1. Logistic Regression***\n",
+    "### 1. Logistic Regression\n",
     "Logistic regression is a ML model that is mainly used for classification problems. The model will calculate the probability of the datapoints belong to each class and then make the final decision by taking the highest probability.\n",
     "\n",
     "Let's create a Logistic Regression model:"
@@ -4817,7 +4778,7 @@
     "id": "U1Ioz6IwGu_u"
    },
    "source": [
-    "### ***2. XGBoost Classifier***\n",
+    "### 2. XGBoost Classifier\n",
     "In this part, we will initialize an XGBClassifier and train the model. This classifies using eXtreme Gradient Boosting - using gradient boosting algorithms for modern data science problems. It falls under the category of **Ensemble Learning** in ML, where we train and predict using many models to produce one superior output.\n",
     "XGBoost is a popular and efficient open-source implementation of the **gradient boosted trees** algorithm. Gradient boosting is a supervised learning algorithm, which attempts to accurately predict a target variable by combining the estimates of a set of simpler, weaker models."
    ]
@@ -5266,239 +5227,7 @@
     "id": "2H3TEhBFsP8r"
    },
    "source": [
-    "## **IV. Conclusion**\n",
-    "In this project, we have used 2 different ML algorithms to predict whether it rains tomorrow or not and the performance is as followed:\n",
-    "* **Logistic Regression**: approx. ***86.6%***\n",
-    "* **XGBoost Classifier**: approx. ***87.6%***\n",
-    "\n",
-    "Overall, the two models seem to perform well on this dataset with no sign of overfitting."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "LcYGLhabtko4"
-   },
-   "source": [
-    "# Predicting rain in Australia"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "bjJwm55UuAxg"
-   },
-   "source": [
-    "**INTRODUCTION**\n",
-    "\n",
-    "In this project, we will compare 2 machine learning models, namely **Logistic Regression** and **XGBoost** , and also explain the use for each algorithm. The dataset used for this project is\n",
-    "called **weatherAUS**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "Js09ZMroKcQ0"
-   },
-   "source": [
-    "First, let's import some basic libraries used for **processing data** and **visualisation**."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 72
-    },
-    "colab_type": "code",
-    "id": "NeuXglElXLjJ",
-    "outputId": "963bd24a-8827-40ba-afec-74ea187efd6d"
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np                  #For linear algebra\n",
-    "import pandas as pd                 #For working with dataset\n",
-    "import matplotlib                 \n",
-    "import matplotlib.pyplot as plt     #Visualisation\n",
-    "import seaborn as sns               #Visualisation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "glhU0NTdGlLV"
-   },
-   "source": [
-    "## **I. Data exploration**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "rBgZgw0fLb5w"
-   },
-   "source": [
-    "Read the dataset and inspect its appearance.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 309
-    },
-    "colab_type": "code",
-    "id": "pxhAKxjpZUCW",
-    "outputId": "4c838f55-aa5a-4b7d-f11a-fb1c841db98a"
-   },
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('./input/weatherAUS.csv')\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 139
-    },
-    "colab_type": "code",
-    "id": "z-zJtYIcZd6n",
-    "outputId": "b9756994-08d0-45d3-8632-caa7da5c4cc4"
-   },
-   "outputs": [],
-   "source": [
-    "print(df.columns)\n",
-    "print(len(df.columns))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "hizQtdzbPA12"
-   },
-   "source": [
-    "> In this dataset, we have **23** columns, including the target **RainTomorrow** variable."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "zvQbVethPYYX"
-   },
-   "source": [
-    "Let's have a look at the dataset information"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 537
-    },
-    "colab_type": "code",
-    "id": "mOtk4JIYZtUV",
-    "outputId": "89685bf9-fdae-4ef2-bbe9-b75ab04977c0"
-   },
-   "outputs": [],
-   "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "l00R4wF6aUkN"
-   },
-   "source": [
-    "> We can see that our dataset includes both **numerical** and **categorical** variables. And there are also **missing values** in our dataset since the number of **non-null** values doesn't match the number of entries."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "fA0ViIDVlfoi"
-   },
-   "source": [
-    "We create 2 variable called **`categorical`** and **`numerical`** to make it easier for inspecting the columns given their different characteristics."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 72
-    },
-    "colab_type": "code",
-    "id": "laaau0RSZ3vc",
-    "outputId": "7474ab44-224f-4f9d-bf7c-db2fc95d18af"
-   },
-   "outputs": [],
-   "source": [
-    "# List of categorical variables \n",
-    "# dtpyes = '0' means object\n",
-    "categorical = [i for i in df.columns if df[i].dtypes == 'O']\n",
-    "\n",
-    "# List of numerical variables\n",
-    "numerical = [i for i in df.columns if i not in categorical]\n",
-    "print('categorical:', categorical, '\\n', 'numerical: ', numerical)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "8SxSQaipl7i7"
-   },
-   "source": [
-    "Let's check how many null values are there in each variable"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 312
-    },
-    "colab_type": "code",
-    "id": "Tr0-KONI5pbS",
-    "outputId": "90ca6ecb-5d18-4f8e-ee01-d35a0b8e2cdb"
-   },
-   "outputs": [],
-   "source": [
-    "df[numerical].isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "2H3TEhBFsP8r"
-   },
-   "source": [
-    "## **IV. Conclusion**\n",
+    "## IV. Conclusion\n",
     "In this project, we have used 2 different ML algorithms to predict whether it rains tomorrow or not and the performance is as followed:\n",
     "* **Logistic Regression**: approx. ***86.6%***\n",
     "* **XGBoost Classifier**: approx. ***87.6%***\n",
