--- a/_notebooks/2021-04-18-rain-in-australia.ipynb
+++ b/_notebooks/2021-04-18-rain-in-australia.ipynb
@@ -24,7 +24,7 @@
     "id": "bjJwm55UuAxg"
    },
    "source": [
-    "## INTRODUCTION\n",
+    "## Introduction\n",
     "\n",
     "In this project, we will compare 2 machine learning models, namely **Logistic Regression** and **XGBoost** , and also explain the use for each algorithm. The dataset used for this project is\n",
     "called **weatherAUS**"
