--- a/_notebooks/2021-04-18-rain-in-australia.ipynb
+++ b/_notebooks/2021-04-18-rain-in-australia.ipynb
@@ -14,7 +14,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [jupyter]\n",
-    "- image: images/fire-aus.jpg"
+    "- image: images/covid-vaccine.jpg"
    ]
   },
   {
